Switch forecast.io to darksky.net
Forecast.io is going away, and they request a "powered by" thing.

--- a/forecastio/simple_forecast.html
+++ b/forecastio/simple_forecast.html
@@ -11,4 +11,5 @@
       <weather-icon class="icon" icon="forecast.icon"></weather-icon>
     </div>
   </div>
+  <h6>Powered by Dark Sky</h6>
 </div>
