--- a/clock/clock.html
+++ b/clock/clock.html
@@ -1,4 +1,4 @@
 <div class="clock">
   <h2>{{ date.getHours() | pad }}:{{ date.getMinutes() | pad }}</h2>
-  <h3>{{ days[date.getDay()] }}, {{ date.getMonth() }}/{{ date.getDate() }}</h3>
+  <h3>{{ days[date.getDay()] }}, {{ date.getMonth() + 1 }}/{{ date.getDate() }}</h3>
 </div>
